# NJU-ProjectN_nemu

./: .gitignore  Kconfig  Makefile
resource/risv32-bin/: CMakeLists.txt
scripts/: build.mk  native.mk
src/isa/riscv32/: inst.c
